--- a/index.html
+++ b/index.html
@@ -1,44 +1,86 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Sadhana Tracker</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style>
-      body {
-        margin: 0;
-        font-family: Arial, sans-serif;
-        background: #000080;
-        color: white;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-      }
-      .card {
-        background: white;
-        color: #000080;
-        padding: 30px;
-        border-radius: 12px;
-        text-align: center;
-        max-width: 400px;
-      }
-      h1 {
-        margin-bottom: 10px;
-      }
-      p {
-        font-size: 14px;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="card">
-      <h1>🙏 Sadhana Tracker</h1>
-      <p>
-        Welcome!  
-        <br /><br />
-        This app will help ISKCON devotees track daily sādhana.
-      </p>
-      <p><strong>Coming Soon...</strong></p>
-    </div>
-  </body>
+<head>
+  <title>Sadhana Tracker – Login</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #000080;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .card {
+      background: white;
+      color: #000080;
+      padding: 30px;
+      border-radius: 12px;
+      text-align: center;
+      width: 320px;
+    }
+    input {
+      width: 100%;
+      padding: 10px;
+      margin: 8px 0;
+    }
+    button {
+      width: 100%;
+      padding: 10px;
+      background: #000080;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+    .msg {
+      margin-top: 10px;
+      font-size: 14px;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="card">
+    <h2>🙏 Sadhana Tracker</h2>
+
+    <input type="email" id="email" placeholder="Email" />
+    <input type="password" id="password" placeholder="Password" />
+
+    <button onclick="login()">Login</button>
+
+    <div class="msg" id="msg"></div>
+  </div>
+
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyDbRy8ZMJAWeTyZVnTphwRIei6jAckagjA",
+      authDomain: "sadhana-tracker-b65ff.firebaseapp.com",
+      projectId: "sadhana-tracker-b65ff",
+      appId: "1:926961218888:web:db8f12ef8256d13f036f7d"
+    };
+
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+
+    function login() {
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+
+      auth.signInWithEmailAndPassword(email, password)
+        .then(() => {
+          document.getElementById("msg").innerText = "Login successful 🙏";
+        })
+        .catch(error => {
+          document.getElementById("msg").innerText = error.message;
+        });
+    }
+  </script>
+</body>
 </html>
