--- a/index.html
+++ b/index.html
@@ -42,12 +42,6 @@
       cursor: pointer;
       margin-top: 10px;
     }
-    .link {
-      font-size: 14px;
-      cursor: pointer;
-      margin-top: 10px;
-      display: block;
-    }
     .msg {
       margin-top: 10px;
       font-size: 14px;
@@ -57,32 +51,25 @@
 
 <body>
 
-<!-- AUTH SCREEN -->
+<!-- LOGIN / SIGNUP -->
 <div class="card" id="authScreen">
   <h2>🙏 Sadhana Tracker</h2>
-
   <input type="email" id="email" placeholder="Email" />
   <input type="password" id="password" placeholder="Password" />
-
   <button onclick="login()">Login</button>
   <button onclick="signup()">Sign Up</button>
-
   <div class="msg" id="msg"></div>
 </div>
 
-<!-- CATEGORY SCREEN -->
+<!-- CATEGORY -->
 <div class="card" id="categoryScreen" style="display:none;">
   <h3>Select Chanting Category</h3>
-
-  <select id="categorySelect">
-    <option value="">-- Select Category --</option>
-  </select>
-
+  <select id="categorySelect"></select>
   <button onclick="saveCategory()">Save Category</button>
   <div class="msg" id="catMsg"></div>
 </div>
 
-<!-- WELCOME SCREEN -->
+<!-- WELCOME -->
 <div class="card" id="welcomeScreen" style="display:none;">
   <h2>🙏 Welcome</h2>
   <p>You are logged in successfully</p>
@@ -91,7 +78,7 @@
 </div>
 
 <script>
-  // 🔥 Firebase Config (YOURS)
+  // Firebase config
   const firebaseConfig = {
     apiKey: "AIzaSyDbRy8ZMJAWeTyZVnTphwRIei6jAckagjA",
     authDomain: "sadhana-tracker-b65ff.firebaseapp.com",
@@ -103,87 +90,74 @@
   const auth = firebase.auth();
   const db = firebase.firestore();
 
-  // LOGIN
+  // 🔥 AUTO LOGIN CHECK (MOST IMPORTANT PART)
+  auth.onAuthStateChanged(user => {
+    if (!user) {
+      showAuth();
+    } else {
+      db.collection("users").doc(user.uid).get().then(doc => {
+        if (doc.exists && doc.data().currentCategoryId) {
+          showWelcome();
+        } else {
+          showCategory();
+          loadCategories();
+        }
+      });
+    }
+  });
+
   function login() {
-    const email = emailValue();
-    const password = passwordValue();
-
-    auth.signInWithEmailAndPassword(email, password)
-      .then(() => {
-        showWelcome();
-      })
-      .catch(err => showMsg(err.message));
+    auth.signInWithEmailAndPassword(
+      email.value,
+      password.value
+    ).catch(e => msg.innerText = e.message);
   }
 
-  // SIGNUP
   function signup() {
-    const email = emailValue();
-    const password = passwordValue();
-
-    auth.createUserWithEmailAndPassword(email, password)
-      .then(() => {
-        showCategory();
-        loadCategories();
-      })
-      .catch(err => showMsg(err.message));
+    auth.createUserWithEmailAndPassword(
+      email.value,
+      password.value
+    ).then(() => {
+      showCategory();
+      loadCategories();
+    }).catch(e => msg.innerText = e.message);
   }
 
-  // LOAD CATEGORIES
   function loadCategories() {
-    const select = document.getElementById("categorySelect");
-    select.innerHTML = '<option value="">-- Select Category --</option>';
-
+    const sel = document.getElementById("categorySelect");
+    sel.innerHTML = "";
     db.collection("chantingCategories")
       .where("active", "==", true)
       .get()
-      .then(snapshot => {
-        snapshot.forEach(doc => {
-          const opt = document.createElement("option");
-          opt.value = doc.id;
-          opt.innerText = doc.data().name;
-          select.appendChild(opt);
+      .then(snap => {
+        snap.forEach(doc => {
+          const o = document.createElement("option");
+          o.value = doc.id;
+          o.text = doc.data().name;
+          sel.appendChild(o);
         });
       });
   }
 
-  // SAVE CATEGORY
   function saveCategory() {
-    const categoryId = document.getElementById("categorySelect").value;
     const user = auth.currentUser;
+    const cat = categorySelect.value;
 
-    if (!categoryId) {
-      document.getElementById("catMsg").innerText = "Please select a category";
+    if (!cat) {
+      catMsg.innerText = "Please select category";
       return;
     }
 
     db.collection("users").doc(user.uid).set({
       email: user.email,
+      currentCategoryId: cat,
       role: "user",
-      currentCategoryId: categoryId,
       isActive: true
-    }).then(() => {
-      showWelcome();
-    });
+    }).then(() => showWelcome());
   }
 
-  // LOGOUT
   function logout() {
-    auth.signOut().then(() => {
-      showAuth();
-    });
-  }
-
-  // HELPERS
-  function emailValue() {
-    return document.getElementById("email").value;
-  }
-
-  function passwordValue() {
-    return document.getElementById("password").value;
-  }
-
-  function showMsg(msg) {
-    document.getElementById("msg").innerText = msg;
+    auth.signOut();
   }
 
   function showAuth() {
